syntax = "proto3";

package entity;

message User{
  string telegram_user_id = 1;
}
