syntax = "proto3";

package admin;

import "system/ajax/entity/user.proto";

option java_multiple_files = true;

message GetAllUsersRequest{

}

message GetAllUsersResponse{

  oneof response{
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    repeated string telegram_user_ids = 1;
  }

  message Failure{
    string error_massage = 1;
  }
}
